2008-10-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/scripts/ : move *.sh, *.mkf and *.mk files from src/ to src/scripts/

	* src/*/{Lib|Source}/Makefile: change to non-GNU-make style

2008-10-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Makevars, src/Makevars.win: replacing
	* src/Makefile, src/Makefile.win which are no longer needed

2008-10-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Makefile, src/*/Makefile: changes from Brian Ripley enabling
	parallel make.

2008-10-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (isValid_Csparse): new utility
	* src/chm_common.c (as_cholmod_sparse): add validity check early
	* tests/validObj.R: test the above

2008-10-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (printSpMatrix2): another validObject(.) call
	* src/Makefile: getting rid of SUBSTAMP etc, thanks to Simon U.

2008-10-01  Douglas Bates <bates@stat.wisc.edu>

	* src/Makefile:
	* src/SPQR/*  add "SPQR", from Tim Davis' "SuiteSparse" collection,
	not yet with an R interface.

2008-09-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* Release 0.999375-15 to CRAN.

2008-09-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsyMatrix.c (dsyMatrix_as_dspMatrix): copy 'factors' slot
	* tests/dpo-test.R: test for it

	* R/Tsparse.R (intI): improve one error message.

2008-09-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-15 to be released

	* R/diagMatrix.R (diag o <Matrix>): explicit setMethods,
	in order to keep result diagonal in many more cases.
	(coerce) to denseMatrix now *does* coerce.

	* man/diagonalMatrix-class.Rd: \alias{} for these.

	* R/Auxiliaries.R (.dense.prefixes): ".diMatrix" has not been dense
	anymore!

	* R/dMatrix.R: as(<dMatrix>, <nMatrix>): enable Cholesky/BunchKaufman

2008-09-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lsparseMatrix.R (C2l): as(<d.Csparse>, "lMatrix") should
	preserve NAs.
