@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-16
-Date: 2008-10-16
+Date: 2008-10-17
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
