@@ -12,19 +12,26 @@ OBJECTS = $(SOURCES_C:.c=.o)
 SUBDIRS = SPQR CHOLMOD COLAMD AMD
 SUBLIBS = $(SUBDIRS:=.a)
 
-## We have to clean here, to clean up between architectures
-all: clean sublibs $(SHLIB)
+all: $(SHLIB)
+## making src/*.o and in sublibs can be done simultaneously
+$(SHLIB): $(OBJECTS) sublibs
 
-sublibs:
+## We have to clean here, to clean up between architectures:
+## INSTALL only cleans src/*.o src/*$(SHLIB_EXT) for each arch
+sublibs: subclean
 	@for d in $(SUBDIRS); do \
 	  (cd $${d} && CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)" MkInclude="$(MkInclude)" $(MAKE) library) || exit 1; \
 	done
 
-clean:
+clean: subclean
 	@-rm -rf .libs _libs
-	@-rm -f *.o $(SHLIB) *.a
+	@-rm -f *.o $(SHLIB)
+
+subclean:
+	@-rm -f *.a
 	@for d in $(SUBDIRS); do \
 	  (cd $${d} && MkInclude="$(MkInclude)" $(MAKE) clean) || exit 1; \
 	done
+
 
 include scripts/DEPS.mkf
