@@ -5,7 +5,12 @@ PKG_CFLAGS = -I./UFconfig
 ## we use the BLAS and the LAPACK library:
 PKG_LIBS = $(SUBLIBS) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
 
+ifneq ($(strip $(BUILD)),CROSS)
 PKG_HOME = $(shell $(RHOME)/src/gnuwin32/Rpwd.exe .)
+else
+PKG_HOME = $(shell pwd)
+endif
+
 MkInclude = $(PKG_HOME)/scripts/Win.mk
 
 include scripts/SOURCES_C.mkf
@@ -26,3 +31,5 @@ clean:
 	@for d in $(SUBDIRS); do \
 	  (cd $${d} && MkInclude="$(MkInclude)" $(MAKE) clean) || exit 1; \
 	done
+
+## don't include DEPS.mkf because Windows creates dependencies by default.
